# sample-debian-app

./: .gitignore  HOW_TO_RUN.txt  README.md  build_deb.py  build_deb_package.py  requirements.txt  sample-config-pkg_1.0.0_all.deb
app/: main.py
app/services/: certificate_service.py
deb_pkg_generator/: README.md  deb_generator.py  requirements.txt
debian_templates/: control.j2  postinst.j2  postrm.j2  preinst.j2  triggers.j2
debpkg/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
debpkg/config/: package.yaml
debpkg/scripts/: quick-start.sh
debpkg/src/debpkg/: __init__.py  cli.py
debpkg/src/debpkg/cert_generator/: __init__.py  generator.py
debpkg/src/debpkg/package_builder/: __init__.py  builder.py
debpkg/src/debpkg/utils/: __init__.py  ar_archive.py  template_renderer.py
debpkg/templates/: config.conf.j2
debpkg/templates/debian/: control.j2  postinst.j2  postrm.j2  preinst.j2  triggers.j2
temp_extraction/etc/sampleapp/: sample.conf
